# Test_env

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: main.py
src/alembic/versions/: 2024_07_22_1750-c3026743c878_create_access_table.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py
src/crud/: ETL_upload.py
