[project]
name = "Test_env"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "User-Zero", email = "ildus91ov@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.1",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.3.4",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
